# form-builder

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: field.rs  form.rs  form_builder.rs  input.rs  lib.rs  main.rs  multiselect_field.rs  optional.rs  select_field.rs  validation.rs
