[package]
name = "form_builder"
version = "1.0.0"
edition = "2021"
authors = ["Mikołaj Gawron <gawrmiko@gmail.com>"]
description = "A library for building forms with various fields and validation."
license = "MIT"
repository = "https://github.com/vertyll/form-builder"
documentation = "https://docs.rs/form_builder"
readme = "README.md"
keywords = ["form", "builder", "validation", "fields", "input"]
categories = ["data-structures", "parsing", "command-line-utilities"]

[dependencies]
regex = "1.11.1"
libc = "0.2"